--- a/src/app/modules/home/homepage/homepage.component.html
+++ b/src/app/modules/home/homepage/homepage.component.html
@@ -8,9 +8,17 @@
     </section>
     <section class="section-2" id="about-us">
         <div class="container about">
-            <div class="h3 text-center">
+            <div class="h3 text-center m-5">
                 GA-auto е платформа за наемане и отдаване на превозни средства, където гостите могат да резервират всеки автомобил в удобно за тях време и място. Гостите избират от широка гама коли, докато домакините печелят допълнителни пари.
-            Офисът ни за справки се намира в град Горна Оряховица, но винаги можете да се свържете онлайн с нас на e-mail georgi@mail.com или на номер 0888-333-444.
+            Офисът ни за справки се намира в град Горна Оряховица, но винаги можете да се свържете с нас онлайн или по телефона.
+            </div>
+            <div class="row contacts">
+                <div class="col-6 text-center">
+                    <i class="fas fa-phone-volume text-primary"></i> 0899 700 800
+                </div>
+                <div class="col-6 text-center">
+                    <i class="fas fa-at text-primary"></i> admin@mail.com
+                </div>
             </div>
         </div>
     </section>
