--- a/src/app/modules/home/homepage/homepage.component.scss
+++ b/src/app/modules/home/homepage/homepage.component.scss
@@ -35,5 +35,9 @@
         padding: 25px;
         background-color: rgba(245, 243, 239, 0.87);
         box-shadow: 0 0 15px;
+        .contacts{
+            margin: 25px;
+            font-size: 2rem;
+        }
     }
 }
