--- a/src/app/modules/hosting/manage-cars/edit-car/edit-main/edit-main.component.html
+++ b/src/app/modules/hosting/manage-cars/edit-car/edit-main/edit-main.component.html
@@ -198,7 +198,7 @@
               {{ "HOSTING.WEEKLY_DISCOUNT" | translate }}:
               <mat-icon
                 class="far fa-question-circle h6"
-                matTooltip="{{ 'HOSTING.WEEKLY_DISCOUNT' | translate }}"
+                matTooltip="{{ 'HOSTING.WEEKLY_DISCOUNT_TOOLTIP' | translate }}"
                 matTooltipPosition="above"
               ></mat-icon>
             </h6>
