--- a/src/app/modules/hosting/manage-reservations/manage-reservations.component.html
+++ b/src/app/modules/hosting/manage-reservations/manage-reservations.component.html
@@ -53,7 +53,7 @@
     class="mt-5"
   >
     <h1 class="text-center">
-      {{ 'CARS.RESERVATION.WAITING_FIRST'|translate }}
+      {{ 'CARS.RESERVATION.AWAITING_FIRST'|translate }}
     </h1>
   </div>
 </div>
